fix: z-index issue

--- a/src/components/Navigation/Navbar.module.css
+++ b/src/components/Navigation/Navbar.module.css
@@ -11,7 +11,7 @@
     left: 0;
     max-width: 100svw;
     width: 100%;
-    z-index: 100;
+    z-index: 50;
 }
 
 .navbar ul {
